--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -1,6 +1,7 @@
 @import "../../assets/styles/colors.scss";
 
 .header {
+  height: 88px;
   padding: 24px;
   align-items: center;
   background-color: $white;
@@ -52,6 +53,8 @@
 
 @media (max-width: 1039px) {
   .header {
+    height: auto;
+
     &__logo-container {
       width: 100%;
       justify-content: space-between;
