--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -34,16 +34,23 @@
   .charity {
     &__mint {
       h3 {
-        margin-top: 20px;
+        margin-top: 10px;
+      }
+
+      .input {
+        height: 30px;
       }
 
       & > div {
         display: flex;
 
-        .btn:first-of-type {
+        .btn {
           margin-top: 0;
           margin-right: 0;
           margin-left: 20px;
+          padding-top: 5px;
+          padding-bottom: 5px;
+          height: 30px;
         }
       }
     }
@@ -57,6 +64,7 @@
 
     &__header {
       padding-left: 12px;
+      padding-right: 12px;
 
       p.bold {
         height: fit-content;
@@ -154,7 +162,6 @@
       .contact {
         display: flex;
         flex-wrap: wrap;
-        justify-content: center;
 
         .btn {
           width: 196px;
@@ -196,7 +203,7 @@
     &__heading {
       text-transform: uppercase;
       position: relative;
-      width: calc(20% - 24px);
+      width: 100%;
       height: 20px;
       margin-right: 24px;
 
@@ -213,9 +220,7 @@
     }
 
     &__content {
-      display: flex;
       flex-wrap: wrap;
-      width: 60%;
     }
 
     &__description {
@@ -232,8 +237,15 @@
     }
 
     &__item {
-      padding: 0 12px;
       flex-wrap: wrap;
+
+      &:first-of-type {
+        padding-right: 12px;
+      }
+
+      &:last-of-type {
+        padding-left: 12px;
+      }
 
       &-img-container {
         border-top-left-radius: 10px;
@@ -401,12 +413,21 @@
         top: 100%;
         width: 100%;
         height: 87px;
+        padding-left: calc(50% - 100px);
       }
 
       &-arrow {
         &-prev,
         &-next {
           bottom: -64px;
+        }
+
+        &-prev {
+          left: calc(50% - 60px);
+        }
+
+        &-next {
+          left: 50%;
         }
       }
     }
@@ -427,6 +448,12 @@
       .contact {
         width: 100%;
         flex-flow: column;
+
+        &__email {
+          display: flex;
+          flex-wrap: wrap;
+          justify-content: center;
+        }
 
         .btn {
           margin: 0 auto;
